<resources>
    <string name="app_name">Campus Manager</string>
    <string name="seeText">Lihat Data</string>
    <string name="insertText">Input Data</string>
    <string name="infoText">Informasi</string>
    <string name="numberHint">Nomor</string>
    <string name="nameHint">Nama</string>
    <string name="dateHint">Tanggal Lahir</string>
    <string name="genderHint">Jenis Kelamin</string>
    <string name="addressHint">Alamat</string>
    <string name="saveText">Simpan</string>
    <string name="nameAlumni">Nama :</string>
    <string name="noDataText">Belum ada Data Mahasiswa</string>
    <string name="inputTitle">Input Data</string>
    <string name="updateTitle">Update Data</string>
    <string name="descApp">Campus Manager adalah sebuah aplikasi yang dirancang untuk membantu manajemen data mahasiswa di lingkungan kampus atau universitas. Aplikasi ini memungkinkan pengguna untuk melakukan operasi CRUD pada data mahasiswa, sehingga mempermudah proses administrasi dan pengelolaan informasi akademik.</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="loginText">Masuk</string>
    <string name="noAccount">Belum Memiliki Akun?</string>
    <string name="registerText">Daftar</string>
    <string name="haveAccount">Sudah Punya Akun?</string>
    <string name="logoutText">Log Out</string>
    <string name="customizeText">Kustomisasi Data</string>
    <string name="deleteText">Hapus Data</string>
    <string name="updateText">Edit Data</string>
</resources>