<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/bgColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.HomeActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:src="@drawable/ic_student" />

        <Button
            android:id="@+id/seeDataBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:drawableLeft="@drawable/ic_add"
            android:text="@string/seeText"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/addDataBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:backgroundTint="@color/blue"
            android:drawableLeft="@drawable/ic_plus"
            android:text="@string/insertText"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/infoBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:drawableLeft="@drawable/ic_info"
            android:layout_marginBottom="8dp"
            android:text="@string/infoText"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/logoutBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:drawableLeft="@drawable/ic_logout"
            android:text="@string/logoutText"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>